# spen

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.txt  INSTALL  LICENSE  Makefile  Makefile.config  README-artifact.txt  README.txt
minisat/: README  README_minisat_inc  README_minisat_inc.txt  README_minisat_unsat  README_minisat_unsat.txt  minisat-2.2.0-for-unsat.patch
minisat/core/: Makefile  minisat-2.2.0-for-icnf.patch
samples/: Makefile  README.txt  do-yet-more.sh  doall.sh  gprofall.sh  nol-theory.smt  slrd-logic.smt  slrdi-logic.smt  slrdi-theory.smt
samples/avl/: avl-delete.slad  avl-insert-vc01.smt  avl-insert-vc02.smt  avl-insert-vc03.smt  avl-insert-vc04.smt  avl-insert-vc05.smt  avl-insert-vc06.smt  avl-insert-vc07.smt  avl-insert-vc08.smt  avl-insert-vc09.smt  avl-insert-vc10.smt  avl-insert-vc11.smt  avl-insert-vc12.smt  avl-insert-vc13.smt  avl-insert-vc14.smt  avl-insert-vc15.smt  avl-insert-vc16.smt  avl-insert-vc17.smt  avl-insert-vc18.smt  avl-insert-vc19.smt  avl-insert-vc20.smt  avl-insert-vc21.smt  avl-insert-vc22.smt  avl-insert.slad  avl.c
samples/bst/: README.txt  bst-delete-01.smt2  bst-delete-02.smt2  bst-delete-03.smt2  bst-delete-04.smt2  bst-delete-05.smt2  bst-delete-06.smt2  bst-delete-07.smt2  bst-delete-08.smt2  bst-delete-09.smt2  bst-delete-10.smt2  bst-delete-11.smt2  bst-delete-12.smt2  bst-delete-13.smt2  bst-delete-vc01.smt  bst-delete-vc01.smt2  bst-delete-vc02.smt  bst-delete-vc02.smt2  bst-delete-vc03.smt  bst-delete-vc03.smt2  bst-delete-vc04.smt  bst-delete-vc04.smt2  bst-delete-vc05.smt  bst-delete-vc05.smt2  bst-delete-vc06.smt  bst-delete-vc06.smt2  bst-delete-vc07.smt  bst-delete-vc07.smt2  bst-delete-vc08.smt  bst-delete-vc08.smt2  bst-delete-vc09.smt  bst-delete-vc09.smt2  bst-delete-vc10.smt  bst-delete-vc10.smt2  bst-delete-vc11.smt  bst-delete-vc11.smt2  bst-delete-vc12.smt  bst-delete-vc12.smt2  bst-delete-vc13.smt  bst-delete-vc13.smt2  (+70 more)
samples/com/: do-bench.sh  do-syn-time.sh  do-syn.sh  do-ta-time.sh  gen-exp.sh  get-lemma.sh  get-stats.sh  to-html.sh  to-slrdi.sh  up-bench.sh
samples/dll/: dll-vc01.smt  dll-vc02.smt  dll-vc03.smt  dll-vc04.smt  dll-vc05.smt  dll-vc06.smt  dll-vc07.smt  dll-vc08.smt  dll-vc09.smt  dll-vc10.smt  dll-vc11.smt  dll-vc12.smt  dll-vc13.smt  dll-vc16.smt  dll-vc17.smt  dll-vc18.smt
samples/ls/: ls-sat05.smt  ls-unsat05.smt  ls-vc01.smt  ls-vc02.smt  ls-vc03.smt  ls-vc04.smt  ls-vc05.smt  ls-vc06.smt
samples/lss/: lss-vc01.smt  lss-vc02.smt  lss-vc03.smt  lss-vc04.smt  lss-vc11.smt  lss-vc12.smt  lss-vc13.smt
samples/nlcl/: nlcl-vc02.smt  nlcl-vc03.smt  nlcl-vc04.smt  nlcl-vc05.smt
samples/nll/: Makefile  dll-vc01.smt  dll-vc02.smt  dll-vc03.smt  dll-vc04.smt  dll-vc05.smt  dll-vc09.smt  dll-vc11.smt  doall.sh  ls-vc01.smt  ls-vc02.smt  ls-vc03.smt  ls-vc04.smt  lss-vc-01.smt  lss-vc01.smt  lss-vc03.smt  nlcl-vc01.smt  nlcl-vc03.smt  nlcl-vc04.smt  nlcl-vc05.smt  nll-vc01.smt  nll-vc02.smt  nll-vc03.smt  nll-vc04.smt  nll-vc05.smt  nll-vc06.smt  nll-vc07.smt  nll-vc08.smt  nll-vc09.smt  nll-vc10.smt  nll-vc11.smt  nll-vc12.smt  nll-vc13.smt  nll-vc14.smt  nll-vc15.smt  nll-vc16.smt  skl2-vc01-nil.smt  skl2-vc01.smt  skl2-vc03.smt  skl2-vc04.smt  (+8 more)
samples/rbt/: rbt-insert-vc01.smt  rbt-insert-vc02.smt  rbt-insert-vc03.smt  rbt-insert-vc04.smt  rbt-insert-vc05.smt  rbt-insert-vc06.smt  rbt-insert-vc07.smt  rbt-insert-vc08.smt  rbt-insert-vc09.smt  rbt-insert-vc10.smt  rbt-insert-vc11.smt  rbt-insert-vc12.smt  rbt-insert-vc13.smt  rbt-insert-vc14.smt  rbt-insert-vc15.smt  rbt-insert-vc16.smt  rbt-insert-vc17.smt  rbt-insert-vc18.smt  rbt-insert-vc19.smt  rbt-insert-vc20.smt  rbt-insert-vc21.smt  rbt-insert.slad  rbt.c
samples/skl2/: skl2-vc01.smt  skl2-vc02.smt  skl2-vc03.smt  skl2-vc04.smt
samples/skl3/: skl3-vc01.smt  skl3-vc02.smt  skl3-vc03.smt  skl3-vc04.smt  skl3-vc05.smt  skl3-vc06.smt  skl3-vc07.smt  skl3-vc08.smt  skl3-vc09.smt  skl3-vc10.smt
samples/sls/: sls-delete-vc01.smt  sls-delete-vc02.smt  sls-delete-vc03.smt  sls-delete-vc04.smt  sls-delete.slad  sls-insert-vc01.smt  sls-insert-vc02.smt  sls-insert-vc03.smt  sls-insert-vc04.smt  sls-insert-vc05.smt  sls-insert-vc06.smt  sls-insert-vc07.smt  sls-insert-vc08.smt  sls-insert.slad  sls-search-vc01.smt  sls-search-vc02.smt  sls-search-vc03.smt  sls-search-vc04.smt  sls-search.slad  sls.c
samples/smt-PLDI2011/: Makefile  RESULTS.txt  bolognesa-10-e01.tptp.smt  bolognesa-10-e02.tptp.smt  bolognesa-10-e03.tptp.smt  bolognesa-10-e04.tptp.smt  bolognesa-10-e05.tptp.smt  bolognesa-10-e06.tptp.smt  bolognesa-10-e07.tptp.smt  bolognesa-10-e08.tptp.smt  bolognesa-10-e09.tptp.smt  bolognesa-10-e10.tptp.smt  bolognesa-11-e01.tptp.smt  bolognesa-11-e02.tptp.smt  bolognesa-11-e03.tptp.smt  bolognesa-11-e04.tptp.smt  bolognesa-11-e05.tptp.smt  bolognesa-11-e06.tptp.smt  bolognesa-11-e07.tptp.smt  bolognesa-11-e08.tptp.smt  bolognesa-11-e09.tptp.smt  bolognesa-11-e10.tptp.smt  bolognesa-12-e01.tptp.smt  bolognesa-12-e02.tptp.smt  bolognesa-12-e03.tptp.smt  bolognesa-12-e04.tptp.smt  bolognesa-12-e05.tptp.smt  bolognesa-12-e06.tptp.smt  bolognesa-12-e07.tptp.smt  bolognesa-12-e08.tptp.smt  bolognesa-12-e09.tptp.smt  bolognesa-12-e10.tptp.smt  bolognesa-13-e01.tptp.smt  bolognesa-13-e02.tptp.smt  bolognesa-13-e03.tptp.smt  bolognesa-13-e04.tptp.smt  bolognesa-13-e05.tptp.smt  bolognesa-13-e06.tptp.smt  bolognesa-13-e07.tptp.smt  (+351 more)
smtlib2parser-1.4/: .gitignore  CMakeLists.txt  smtlib2bisonparser.orig.y
src/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  libvata_noll_iface.cc  libvata_noll_iface.h  noll-dp.c  noll.c  noll.h  noll2bool.c  noll2bool.h  noll2graph.c  noll2graph.h  noll2sat.c  noll2sat.h  noll_entl.c  noll_entl.h  noll_form.c  noll_form.h  noll_graph.c  noll_graph.h  noll_graph2ta.c  noll_graph2ta.h  noll_hom.c  noll_hom.h  noll_lemma.c  noll_lemma.h  noll_norm.c  noll_norm.h  noll_option.c  noll_option.h  noll_pred2ta.c  noll_pred2ta.h  noll_pred2ta_gen.c  noll_preds.c  noll_preds.h  noll_sat.c  noll_sat.h  noll_ta_symbols.c  noll_ta_symbols.h  noll_tree.c  (+8 more)
tool/: .gitignore  Makefile.config  README.txt
(+348 files in other folders)
